[workspace]
resolver = "3"
members = ["libnpins", "completions"]

[workspace.dependencies]
serde_json = { version = "^1.0", features = ["preserve_order"] }
url = "^2.5"
anyhow = "^1.0"
log = "^0.4"
tokio = "^1.0"
clap = { version = "=4.5.36", features = [ "derive", "env" ] }

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "EUPL-1.2"

[package]
name = "npins"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
url.workspace = true
anyhow.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

libnpins = { path = "libnpins" }
# Pin clap because the latest patch has a regression in the help output
clap.workspace = true
futures-util = { version = "0.3.31", default-features = false }
crossterm = { version = "0.29", default-features = false }
env_logger = { version = "^0.11.0", features = ["color", "auto-color", "regex"], default-features = false }
