[package]
name = "libnpins"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.clippy]
wildcard_imports = "warn"

[dependencies]
serde = { version = "^1.0", features = [ "derive" ] }
serde_json.workspace = true
url = { workspace = true, features = ["serde"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["process"] }
log.workspace = true
reqwest = { version = "0.13.1", features = [ "rustls" ], default-features = false }
async-trait = "0.1"
lenient_semver_parser = { version = "0.4.2", default-features = false }
lenient_version = { version = "0.4.2" }
nix-compat = { git = "https://git.snix.dev/snix/snix", rev = "4918571f95d436d2e3da4665e8c1e9b77d9546e8", default-features = false, features = ["serde"] }

[dev-dependencies]
env_logger = { version = "^0.11.0", features = ["color", "auto-color", "regex"], default-features = false }
