[package]
name = "libnpins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "^1.0", features = [ "derive" ] }
serde_json.workspace = true
url.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["process"] }
log.workspace = true
reqwest = { version = "0.13.1", features = [ "rustls" ], default-features = false }
async-trait = "0.1"
lenient_semver_parser = { version = "0.4.2", default-features = false }
lenient_version = { version = "0.4.2" }
nix-compat = { git = "https://git.snix.dev/snix/snix", version = "0.1.0", features = ["serde"] }

[dev-dependencies]
env_logger = { version = "^0.11.0", features = ["color", "auto-color", "regex"], default-features = false }
